Statistiken (LL-U17; LL-U15) dazugefügt

--- a/ov.html
+++ b/ov.html
@@ -146,11 +146,12 @@ function init() {
       <a id="schedule_br3" href="schedule.html?key=br3"><h3>Spieltermine (AR)</h3></a>
       <a id="results_br3" href="results.html?key=br3"><h3>Ergebnisse (AR)</h3></a>
       <a id="standings_br3" href="standings.html?key=br3"><h3>Tabelle (AR)</h3></a>
+      <a id="statistics_br3" href="/uld/statistics3AR.html"><h3>Statistik (AR)</h3></a>
 
       <a id="results_br3g" href="results.html?key=br3g"><h3>Ergebnisse (GD)</h3></a>
       <a id="standings_br3g" href="standings.html?key=br3g"><h3>Tabelle (GD)</h3></a>
+      <a id="statistics_br3g" href="/uld/statistics3.html"><h3>Statistik (GD)</h3></a>
 
-      <a id="statistics_br3" href="/uld/statistics3.html"><h3>Statistik</h3></a>
       <a id="teambuilding_br3" href="/uld/grundlagen3/tb"><h3>Teambuilding</h3></a>
     </div>
 
