Stats - correct back links

--- a/_work/statistics/statistics.html
+++ b/_work/statistics/statistics.html
@@ -171,10 +171,10 @@ function init() {
 <body onload="init();">
 <div id="header">
   <div class="left">
-  <a href="/ov.html#statistics_br3"><img src="/image/logo.png"/></a>
+  <a href="/ov.html#statistics_{{back}}"><img src="/image/logo.png"/></a>
   <div>Statistik</div>
   </div><div class="right">
-  <a href="/ov.html#statistics_br3"><img src="/image/logo.png"/></a>
+  <a href="/ov.html#statistics_{{back}}"><img src="/image/logo.png"/></a>
   </div>
 </div>
 </div>
