--- a/ov.html
+++ b/ov.html
@@ -43,9 +43,9 @@ function init() {
       'schedule_br4', 'results_br4', 'standings_br4',
 
       'grundlagen_br3',
-        'schedule_br3', 'results_br3', 'standings_br3',
-        'results_br3g', 'standings_br3g',
-        'statistics_br3', 'teambuilding_br3',
+        'schedule_br3', 'results_br3', 'standings_br3', 'statistics_br3',
+        'results_br3g', 'standings_br3g', 'statistics_br3g',
+        'teambuilding_br3',
 
       'results_br2g', 'standings_br2g',
 
@@ -59,10 +59,10 @@ function init() {
     ],
     'br3': [
       'grundlagen_br3',
-        'schedule_br3', 'results_br3', 'standings_br3',
+        'schedule_br3', 'results_br3', 'standings_br3', 'statistics_br3',
         // 'schedule_br3g',
-        'results_br3g', 'standings_br3g',
-        'statistics_br3', 'teambuilding_br3'
+        'results_br3g', 'standings_br3g', 'statistics_br3g',
+        'teambuilding_br3'
     ],
     'br2': [
       'results_br2g', 'standings_br2g'
