--- a/ov.html
+++ b/ov.html
@@ -40,7 +40,7 @@ function init() {
     'ak': [
       'grundlagen_br4',
       'results_br4g', 'standings_br4g',
-      'schedule_br4', 'results_br4', 'standings_br4',
+      'schedule_br4', 'results_br4', 'standings_br4', 'statistics_br4',
 
       'grundlagen_br3',
         'schedule_br3', 'results_br3', 'standings_br3', 'statistics_br3',
@@ -55,7 +55,7 @@ function init() {
     'br4': [
       'grundlagen_br4',
       'results_br4g', 'standings_br4g',
-      'schedule_br4', 'results_br4', 'standings_br4',
+      'schedule_br4', 'results_br4', 'standings_br4', 'statistics_br4'
     ],
     'br3': [
       'grundlagen_br3',
@@ -134,6 +134,7 @@ function init() {
       <a id="schedule_br4" href="schedule.html?key=br4"><h3>Spieltermine (FD)</h3></a>
       <a id="results_br4" href="results.html?key=br4"><h3>Ergebnisse (FD)</h3></a>
       <a id="standings_br4" href="standings.html?key=br4"><h3>Tabelle (FD)</h3></a>
+      <a id="statistics_br4" href="/uld/statistics4FD.html"><h3>Statistik (FD)</h3></a>
 
       <a id="results_br4g" href="results.html?key=br4g"><h3>Ergebnisse (GD)</h3></a>
       <a id="standings_br4g" href="standings.html?key=br4g"><h3>Tabelle (GD)</h3></a>
