Statistik (AR, MPO)

--- a/ov.html
+++ b/ov.html
@@ -48,7 +48,7 @@ function init() {
         'teambuilding_br3',
 
       'results_br2g', 'standings_br2g',
-      'results_br2m', 'schedule_br2m',
+      'results_br2m', 'schedule_br2m', 'statistics_br2m',
 
       'schedule_br1', 'results_br1', 'standings_br1',
       'results_br1g', 'standings_br1g'
@@ -67,7 +67,7 @@ function init() {
     ],
     'br2': [
       'results_br2g', 'standings_br2g',
-      'results_br2m', 'schedule_br2m'
+      'results_br2m', 'schedule_br2m', 'statistics_br2m',
     ],
     'br1': [
       'schedule_br1', 'results_br1', 'standings_br1',
@@ -162,6 +162,7 @@ function init() {
     <div id="br2_2" class="expanded_container">
       <a id="schedule_br2m" href="schedule.html?key=br2m"><h3>Spieltermine (MPO)</h3></a>
       <a id="results_br2m" href="results.html?key=br2m"><h3>Ergebnisse (MPO)</h3></a>
+      <a id="statistics_br2m" href="/lld/statistics.html"><h3>Statistik (MPO)</h3></a>
       <a id="results_br2g" href="results.html?key=br2g"><h3>Ergebnisse (GD)</h3></a>
       <a id="standings_br2g" href="standings.html?key=br2g"><h3>Tabelle (GD)</h3></a>
     </div>
