improve standings - add info for P and T

--- a/standings.html
+++ b/standings.html
@@ -21,6 +21,35 @@
     font-size: 1em;
     padding: 0px;
   }
+
+  pre#content > div.container {
+    display: inline-block;
+    position: absolute;
+    height: 1em;
+  }
+  pre#content > div.container > input[type=checkbox] {
+    position: absolute;
+    width: 0;
+    height: 0;
+  }
+  pre#content > div.container > label {
+    position: absolute;
+    top: 0;
+    left: 0;
+    font-size: 2.6em;
+    height: 1em;
+  }
+  pre#content > div.container > label > span {
+    position: absolute;
+    top: -1.4em;
+    left: -0.5em;
+    padding: 0.2em 0.5em;
+    display: none;
+    font-size: 1em;
+  }
+  pre#content > div.container > input[type=checkbox]:checked + label > span {
+    display: block;
+  }
   </style>
   <script src="/script/polyfills.js"></script>
   <script src="/script/db.js"></script>
