--- a/ov.html
+++ b/ov.html
@@ -25,14 +25,14 @@ function init() {
     'nw': [
       'grundlagen_u10', 'schedule_u10', 'standings_u10',
       'grundlagen_u11', 'schedule_u11', 'standings_u11',
-      'grundlagen_u12', 'schedule_u12', 'standings_u12',
+      'grundlagen_u12', 'standings_u12f', 'schedule_u12', 'standings_u12q',
       'grundlagen_u13', 'schedule_u13', 'standings_u13',
       'grundlagen_u15', 'schedule_u15', 'standings_u15',
       'statistics_u17'
     ],
     'u10': ['grundlagen_u10', 'schedule_u10', 'standings_u10'],
     'u11': ['grundlagen_u11', 'schedule_u11', 'standings_u11'],
-    'u12': ['grundlagen_u12', 'schedule_u12', 'standings_u12'],
+    'u12': ['grundlagen_u12', 'standings_u12f', 'schedule_u12', 'standings_u12q'],
     'u13': ['grundlagen_u13', 'schedule_u13', 'standings_u13'],
     'u15': ['grundlagen_u15', 'schedule_u15', 'standings_u15'],
     'u17': ['statistics_u17'],
@@ -102,8 +102,9 @@ function init() {
     <h2 id="u12" class="expandable">U12</h2>
     <div id="u12_2" class="expanded_container">
       <a id="grundlagen_u12" href="/u12"><h3>Grundlagen</h3></a>
+      <a id="standings_u12f" href="standings.html?key=u12f"><h3>Endstand</h3></a>
       <a id="schedule_u12" href="schedule.html?key=u12"><h3>Spieltermine</h3></a>
-      <a id="standings_u12" href="standings.html?key=u12"><h3>Tabelle</h3></a>
+      <a id="standings_u12q" href="standings.html?key=u12q"><h3>Tabelle (Qualifikation)</h3></a>
     </div>
 
     <h2 id="u13" class="expandable">U13</h2>
