--- a/ov.html
+++ b/ov.html
@@ -25,17 +25,17 @@ function init() {
     'nw': [
       'grundlagen_u10', 'schedule_u10', 'standings_u10',
       'grundlagen_u11', 'schedule_u11', 'standings_u11',
-      'grundlagen_u12', 'standings_u12f', 'schedule_u12', 'standings_u12q',
+      'grundlagen_u12', 'standings_u12f', 'standings_u12m', 'schedule_u12', 'standings_u12q',
       'grundlagen_u13', 'schedule_u13', 'standings_u13',
       'grundlagen_u15', 'schedule_u15', 'standings_u15',
-      'statistics_u17'
+      'statistics_u17', 'standings_u17'
     ],
     'u10': ['grundlagen_u10', 'schedule_u10', 'standings_u10'],
     'u11': ['grundlagen_u11', 'schedule_u11', 'standings_u11'],
-    'u12': ['grundlagen_u12', 'standings_u12f', 'schedule_u12', 'standings_u12q'],
+    'u12': ['grundlagen_u12', 'standings_u12f', 'standings_u12m', 'schedule_u12', 'standings_u12q'],
     'u13': ['grundlagen_u13', 'schedule_u13', 'standings_u13'],
     'u15': ['grundlagen_u15', 'schedule_u15', 'standings_u15'],
-    'u17': ['statistics_u17'],
+    'u17': ['statistics_u17', 'standings_u17'],
 
     'ak': [
       'grundlagen_br4',
@@ -88,42 +88,44 @@ function init() {
     <h2 id="u10" class="expandable">U10</h2>
     <div id="u10_2" class="expanded_container">
       <a id="grundlagen_u10" href="/u10"><h3>Grundlagen</h3></a>
-      <a id="schedule_u10" href="schedule.html?key=u10"><h3>Spieltermine</h3></a>
-      <a id="standings_u10" href="standings.html?key=u10"><h3>Tabelle</h3></a>
+      <a id="schedule_u10" href="schedule.html?key=u10"><h3>Turniere (Qualifikation)</h3></a>
+      <a id="standings_u10" href="standings.html?key=u10"><h3>Tabelle (Qualifikation)</h3></a>
     </div>
 
     <h2 id="u11" class="expandable">U11</h2>
     <div id="u11_2" class="expanded_container">
       <a id="grundlagen_u11" href="/u11"><h3>Grundlagen</h3></a>
-      <a id="schedule_u11" href="schedule.html?key=u11"><h3>Spieltermine</h3></a>
-      <a id="standings_u11" href="standings.html?key=u11"><h3>Tabelle</h3></a>
+      <a id="schedule_u11" href="schedule.html?key=u11"><h3>Turniere (Qualifikation)</h3></a>
+      <a id="standings_u11" href="standings.html?key=u11"><h3>Tabelle (Qualifikation)</h3></a>
     </div>
 
     <h2 id="u12" class="expandable">U12</h2>
     <div id="u12_2" class="expanded_container">
       <a id="grundlagen_u12" href="/u12"><h3>Grundlagen</h3></a>
-      <a id="standings_u12f" href="standings.html?key=u12f"><h3>Endstand</h3></a>
-      <a id="schedule_u12" href="schedule.html?key=u12"><h3>Spieltermine</h3></a>
+      <a id="standings_u12f" href="standings.html?key=u12f"><h3>Endstand (weiblich)</h3></a>
+      <a id="standings_u12m" href="standings.html?key=u12m"><h3>Endstand (männlich)</h3></a>
+      <a id="schedule_u12" href="schedule.html?key=u12"><h3>Turniere (Qualifikation)</h3></a>
       <a id="standings_u12q" href="standings.html?key=u12q"><h3>Tabelle (Qualifikation)</h3></a>
     </div>
 
     <h2 id="u13" class="expandable">U13</h2>
     <div id="u13_2" class="expanded_container">
       <!--a id="grundlagen_u13" href="u13"><h3>Grundlagen</h3></a-->
-      <a id="schedule_u13" href="schedule.html?key=u13"><h3>Spieltermine</h3></a>
-      <a id="standings_u13" href="standings.html?key=u13"><h3>Tabelle</h3></a>
+      <a id="schedule_u13" href="schedule.html?key=u13"><h3>Turniere (Qualifikation)</h3></a>
+      <a id="standings_u13" href="standings.html?key=u13"><h3>Tabelle (Qualifikation)</h3></a>
     </div>
 
     <h2 id="u15" class="expandable">U15</h2>
     <div id="u15_2" class="expanded_container">
       <!--a id="grundlagen_u15" href="u15"><h3>Grundlagen</h3></a-->
-      <a id="schedule_u15" href="schedule.html?key=u15"><h3>Spieltermine</h3></a>
-      <a id="standings_u15" href="standings.html?key=u15"><h3>Tabelle</h3></a>
+      <a id="schedule_u15" href="schedule.html?key=u15"><h3>Turniere (Qualifikation)</h3></a>
+      <a id="standings_u15" href="standings.html?key=u15"><h3>Tabelle (Qualifikation)</h3></a>
     </div>
 
     <h2 id="u17" class="expandable">U17</h2>
     <div id="u17_2" class="expanded_container">
       <a id="statistics_u17" href="/u17/statistics.html"><h3>Statistik</h3></a>
+      <a id="standings_u17" href="standings.html?key=u17"><h3>Endstand</h3></a>
     </div>
   </div>
 
