--- a/uld/statistics4FD.html
+++ b/uld/statistics4FD.html
@@ -404,10 +404,12 @@ function init() {
 <div class="row"><div class="b"><div class="pt">22</div></div></div>
 <div class="row"><div class="b"><div class="serv"><div class="srvheader">Service</div><div class="info">13</div></div></div></div>
 <div class="row"><div class="b"><div class="pt">23</div></div></div>
-<div class="row"><div class="b"><div class="pt">24</div></div></div>
 <div class="row"><div class="a"><div class="pt">17</div></div></div>
 <div class="row"><div class="a"><div class="serv"><div class="srvheader">Service</div><div class="info">Nina</div></div></div></div>
+<div class="row"><div class="b"><div class="pt">24</div></div></div>
+<div class="row"><div class="b"><div class="serv"><div class="srvheader">Service</div><div class="info">10</div></div></div></div>
 <div class="row"><div class="a"><div class="pt">18</div></div></div>
+<div class="row"><div class="a"><div class="serv"><div class="srvheader">Service</div><div class="info">Kati K</div></div></div></div>
 <div class="row"><div class="a"><div class="pt">19</div></div></div>
 <div class="row"><div class="a"><div class="pt">20</div></div></div>
 <div class="row"><div class="a"><div class="pt">21</div></div></div>
@@ -417,11 +419,11 @@ function init() {
 <div class="row"><div class="a"><div class="pt">24</div></div></div>
 <div class="row"><div class="b"><div class="subst"><div class="in">25</div><div class="out">10</div></div></div></div>
 <div class="row"><div class="b"><div class="pt">25</div></div></div>
-<div class="row"><div class="b"><div class="serv"><div class="srvheader">Service</div><div class="info">25</div></div></div></div>
-<div class="row"><div class="a"><div class="pt">25</div></div></div>
-<div class="row"><div class="a"><div class="serv"><div class="srvheader">Service</div><div class="info">Kati K</div></div></div></div>
-<div class="row"><div class="b"><div class="pt">26</div></div></div>
 <div class="row"><div class="b"><div class="serv"><div class="srvheader">Service</div><div class="info">1</div></div></div></div>
+<div class="row"><div class="a"><div class="pt">25</div></div></div>
+<div class="row"><div class="a"><div class="serv"><div class="srvheader">Service</div><div class="info">Ylva</div></div></div></div>
+<div class="row"><div class="b"><div class="pt">26</div></div></div>
+<div class="row"><div class="b"><div class="serv"><div class="srvheader">Service</div><div class="info">8</div></div></div></div>
 <div class="row"><div class="b"><div class="pt">27</div></div></div>
 
   </div>
