--- a/uld/statistics4FD.html
+++ b/uld/statistics4FD.html
@@ -22,6 +22,7 @@ table.match th {
   font-weight: bold;
   text-align: center;
   background-color: lightgray;
+  white-space: nowrap;
 }
 table.match th.left {
   padding: 0.1em 0.2em;
@@ -33,6 +34,7 @@ table.match td {
   padding: 0 0.1em;
   font-size: 3em;
   text-align: left;
+  white-space: nowrap;
 }
 table.match td.right {
   text-align: right;
