--- a/u15/statistics15pn.html
+++ b/u15/statistics15pn.html
@@ -1871,16 +1871,18 @@ function init() {
 <div class="row"><div class="b"><div class="serv"><div class="srvheader">Service</div><div class="info">5</div></div></div></div>
 <div class="row"><div class="a"><div class="pt">9</div></div></div>
 <div class="row"><div class="a"><div class="serv"><div class="srvheader">Service</div><div class="info">Kati</div></div></div></div>
-<div class="row"><div class="a"><div class="pt">10</div></div></div>
 <div class="row"><div class="b"><div class="pt">19</div></div></div>
 <div class="row"><div class="b"><div class="serv"><div class="srvheader">Service</div><div class="info">18</div></div></div></div>
 <div class="row"><div class="b"><div class="pt">20</div></div></div>
 <div class="row"><div class="b"><div class="pt">21</div></div></div>
 <div class="row"><div class="b"><div class="pt">22</div></div></div>
 <div class="row"><div class="b"><div class="pt">23</div></div></div>
+<div class="row"><div class="a"><div class="pt">10</div></div></div>
 <div class="row"><div class="a"><div class="subst"><div class="in">Franzi</div><div class="out">Magda</div></div></div></div>
 <div class="row"><div class="a"><div class="subst"><div class="in">Yassi</div><div class="out">Stefie</div></div></div></div>
+<div class="row"><div class="a"><div class="serv"><div class="srvheader">Service</div><div class="info">Yassi</div></div></div></div>
 <div class="row"><div class="b"><div class="pt">24</div></div></div>
+<div class="row"><div class="b"><div class="serv"><div class="srvheader">Service</div><div class="info">13</div></div></div></div>
 <div class="row"><div class="b"><div class="pt">25</div></div></div>
 
   </div>
