create diagrams(points, difference) for statistics

--- a/_work/statistics/statistics.match.html
+++ b/_work/statistics/statistics.match.html
@@ -1,5 +1,6 @@
 <h4 id="m{{index}}" class="expandable" style="">{{info}}</h4>
 <div id="m{{index}}_2" class="match expanded_container">
+  <div class="match_container">
   <table class="match" cellspacing="0" cellpadding="2" border="1">
     <tr>
       <th>&nbsp;</th>
@@ -24,5 +25,7 @@
     </tr>
     {{players}}
   </table>
+  </div>
   {{points}}
+  {{diagrams}}
 </div>
