--- a/_work/statistics/statistics.points.html
+++ b/_work/statistics/statistics.points.html
@@ -1,5 +1,5 @@
-<h5 id="mx{{index}}" class="expandable" style="">Verlauf</h5>
-<div id="mx{{index}}_2" class="container expanded_container">
+<h5 id="mx{{index}}" class="expandable" style="">Punkte bei Service</h5>
+<div id="mx{{index}}_2" class="container expanded_container points_container">
 {{sets}}
-<br clear="all">
+<!--br clear="all"-->
 </div>
