--- a/_work/statistics/statistics.html
+++ b/_work/statistics/statistics.html
@@ -11,7 +11,12 @@ h4, h5 {
 }
 /* -- match statistics ----------------------------------------------------- */
 div.match {
+  /* wo kommt das vor??? */
   padding-bottom: 2em;
+}
+div.match_container {
+  position: relative;
+  overflow: auto;
 }
 table.match {
   padding: 1em 0 1em 1em;
@@ -68,10 +73,15 @@ table.match tr.footer td {
   background-color: lightgray;
 }
 /* -- points --------------------------------------------------------------- */
+div.points_container, div.diagrams_container {
+  text-align: left;
+  white-space: nowrap;
+}
 div.column {
+  display: inline-block;
   position: relative;
   width: 20em;
-  float: left;
+  /* float: left; */
   padding: 0 1em 1em;
 }
 div.header {
@@ -159,6 +169,9 @@ div.serv > div.info {
   font-weight: bold;
   background-color: dimgray;
   color: #eee;
+}
+/* -- diagrams ------------------------------------------------------------- */
+svg {
 }
   </style>
   <script src="/elements/expander/script.js"></script>
