--- a/ov.html
+++ b/ov.html
@@ -28,14 +28,15 @@ function init() {
       'grundlagen_u12', 'standings_u12f', 'standings_u12m',
        'results_u12f', 'results_u12m', 'schedule_u12', 'standings_u12q',
       'grundlagen_u13', 'standings_u13f', 'results_u13f', 'schedule_u13', 'standings_u13', 'statistics_u13',
-      'grundlagen_u15', 'schedule_u15', 'standings_u15', 'statistics_u15pn',
+      'grundlagen_u15', 'standings_u15f', 'results_u15f',
+       'schedule_u15', 'standings_u15', 'statistics_u15pn',
       'statistics_u17', 'standings_u17'
     ],
     'u10': ['grundlagen_u10', 'schedule_u10', 'standings_u10'],
     'u11': ['grundlagen_u11', 'schedule_u11', 'standings_u11'],
     'u12': ['grundlagen_u12', 'standings_u12f', 'standings_u12m', 'results_u12f', 'results_u12m', 'schedule_u12', 'standings_u12q'],
     'u13': ['grundlagen_u13', 'standings_u13f', 'results_u13f', 'schedule_u13', 'standings_u13', 'statistics_u13'],
-    'u15': ['grundlagen_u15', 'schedule_u15', 'standings_u15', 'statistics_u15pn'],
+    'u15': ['grundlagen_u15', 'standings_u15f', 'results_u15f', 'schedule_u15', 'standings_u15', 'statistics_u15pn'],
     'u17': ['statistics_u17', 'standings_u17'],
 
     'ak': [
@@ -124,6 +125,8 @@ function init() {
     <h2 id="u15" class="expandable">U15</h2>
     <div id="u15_2" class="expanded_container">
       <!--a id="grundlagen_u15" href="u15"><h3>Grundlagen</h3></a-->
+      <a id="standings_u15f" href="standings.html?key=u15f"><h3>Endstand</h3></a>
+      <a id="results_u15f" href="results.html?key=u15f"><h3>Spiele</h3></a>
       <a id="schedule_u15" href="schedule.html?key=u15"><h3>Turniere (Qualifikation)</h3></a>
       <a id="standings_u15" href="standings.html?key=u15"><h3>Tabelle (Qualifikation)</h3></a>
       <a id="statistics_u15pn" href="/u15/statistics15pn.html"><h3>Statistik (Pordenone)</h3></a>
