--- a/ov.html
+++ b/ov.html
@@ -25,7 +25,9 @@ function init() {
     'nw': [
       'grundlagen_u10', 'schedule_u10', 'standings_u10',
       'grundlagen_u11', 'schedule_u11', 'standings_u11',
-      'grundlagen_u12', 'standings_u12f', 'standings_u12m',
+      'grundlagen_u12',
+       'standings_u12x', 'results_u12x', 'statistics_u12x',
+       'standings_u12f', 'standings_u12m',
        'results_u12f', 'results_u12m', 'schedule_u12', 'standings_u12q',
       'grundlagen_u13', 'standings_u13f', 'results_u13f', 'schedule_u13', 'standings_u13', 'statistics_u13',
       'grundlagen_u15',
@@ -35,7 +37,10 @@ function init() {
     ],
     'u10': ['grundlagen_u10', 'schedule_u10', 'standings_u10'],
     'u11': ['grundlagen_u11', 'schedule_u11', 'standings_u11'],
-    'u12': ['grundlagen_u12', 'standings_u12f', 'standings_u12m', 'results_u12f', 'results_u12m', 'schedule_u12', 'standings_u12q'],
+    'u12': ['grundlagen_u12',
+            'standings_u12x', 'results_u12x', 'statistics_u12x',
+            'standings_u12f', 'standings_u12m', 'results_u12f', 'results_u12m',
+            'schedule_u12', 'standings_u12q'],
     'u13': ['grundlagen_u13', 'standings_u13f', 'results_u13f', 'schedule_u13', 'standings_u13', 'statistics_u13'],
     'u15': ['grundlagen_u15', 'standings_u15f', 'results_u15f', 'statistics_u15f', 'schedule_u15', 'standings_u15', 'statistics_u15pn'],
     'u17': ['statistics_u17', 'standings_u17'],
@@ -105,6 +110,11 @@ function init() {
     <h2 id="u12" class="expandable">U12</h2>
     <div id="u12_2" class="expanded_container">
       <a id="grundlagen_u12" href="/u12"><h3>Grundlagen</h3></a>
+
+      <!--a id="standings_u12x" href="standings.html?key=u12x"><h3>Endstand (ÖMS)</h3></a-->
+      <a id="results_u12x" href="results.html?key=u12x"><h3>Spiele (ÖMS)</h3></a>
+      <a id="statistics_u12x" href="/u12/statistics.html"><h3>Statistik (ÖMS)</h3></a>
+
       <a id="standings_u12f" href="standings.html?key=u12f"><h3>Endstand (weiblich)</h3></a>
       <a id="results_u12f" href="results.html?key=u12f"><h3>Spiele (weiblich)</h3></a>
       <a id="standings_u12m" href="standings.html?key=u12m"><h3>Endstand (männlich)</h3></a>
@@ -184,7 +194,7 @@ function init() {
 
     <h2 id="br1" class="expandable">Brückl 1 - Bundesliga</h2>
     <div id="br1_2" class="expanded_container">
-      <a id="schedule_br1" href="schedule.html?key=br1"><h3>Spieltermine (MR)</h3></a>
+      <!--a id="schedule_br1" href="schedule.html?key=br1"><h3>Spieltermine (MR)</h3></a-->
       <a id="results_br1" href="results.html?key=br1"><h3>Ergebnisse (MR)</h3></a>
       <a id="standings_br1" href="standings.html?key=br1"><h3>Tabelle (MR)</h3></a>
       <a id="results_br1g" href="results.html?key=br1g"><h3>Ergebnisse (GD)</h3></a>
