--- a/ov.html
+++ b/ov.html
@@ -111,7 +111,7 @@ function init() {
     <div id="u12_2" class="expanded_container">
       <a id="grundlagen_u12" href="/u12"><h3>Grundlagen</h3></a>
 
-      <!--a id="standings_u12x" href="standings.html?key=u12x"><h3>Endstand (ÖMS)</h3></a-->
+      <a id="standings_u12x" href="standings.html?key=u12x"><h3>Endstand (ÖMS)</h3></a>
       <a id="results_u12x" href="results.html?key=u12x"><h3>Spiele (ÖMS)</h3></a>
       <a id="statistics_u12x" href="/u12/statistics.html"><h3>Statistik (ÖMS)</h3></a>
 
