--- a/ov.html
+++ b/ov.html
@@ -26,7 +26,7 @@ function init() {
       'grundlagen_u10', 'schedule_u10', 'standings_u10',
       'grundlagen_u11', 'schedule_u11', 'standings_u11',
       'grundlagen_u12',
-       'standings_u12x', 'results_u12x', 'statistics_u12x',
+       'certificate_u12x', 'standings_u12x', 'results_u12x', 'statistics_u12x',
        'standings_u12f', 'standings_u12m',
        'results_u12f', 'results_u12m', 'schedule_u12', 'standings_u12q',
       'grundlagen_u13', 'standings_u13f', 'results_u13f', 'schedule_u13', 'standings_u13', 'statistics_u13',
@@ -38,7 +38,7 @@ function init() {
     'u10': ['grundlagen_u10', 'schedule_u10', 'standings_u10'],
     'u11': ['grundlagen_u11', 'schedule_u11', 'standings_u11'],
     'u12': ['grundlagen_u12',
-            'standings_u12x', 'results_u12x', 'statistics_u12x',
+            'certificate_u12x', 'standings_u12x', 'results_u12x', 'statistics_u12x',
             'standings_u12f', 'standings_u12m', 'results_u12f', 'results_u12m',
             'schedule_u12', 'standings_u12q'],
     'u13': ['grundlagen_u13', 'standings_u13f', 'results_u13f', 'schedule_u13', 'standings_u13', 'statistics_u13'],
@@ -109,12 +109,12 @@ function init() {
 
     <h2 id="u12" class="expandable">U12</h2>
     <div id="u12_2" class="expanded_container">
-      <a id="grundlagen_u12" href="/u12"><h3>Grundlagen</h3></a>
-
+      <!--a id="grundlagen_u12" href="/u12"><h3>Grundlagen</h3></a-->
+      <a id="certificate_u12x" href="/imageview.html?i=u12%2Fcertificate.jpeg&b=%2Fov.html%23certificate_u12x"><h3>Urkunde</h3></a>
+      <!--td><a href="/imageview.html?i=uld%2Fgrundlagen%2Fspielfeld.png&t=Spielfeld&x=Das%20Spielfeld.&b=%2Fuld%2Fgrundlagen%23spielfeld"><div>Das Spielfeld.</div></a></td-->
       <a id="standings_u12x" href="standings.html?key=u12x"><h3>Endstand (ÖMS)</h3></a>
       <a id="results_u12x" href="results.html?key=u12x"><h3>Spiele (ÖMS)</h3></a>
       <a id="statistics_u12x" href="/u12/statistics.html"><h3>Statistik (ÖMS)</h3></a>
-
       <a id="standings_u12f" href="standings.html?key=u12f"><h3>Endstand (weiblich)</h3></a>
       <a id="results_u12f" href="results.html?key=u12f"><h3>Spiele (weiblich)</h3></a>
       <a id="standings_u12m" href="standings.html?key=u12m"><h3>Endstand (männlich)</h3></a>
