--- a/ov.html
+++ b/ov.html
@@ -141,8 +141,8 @@ function init() {
     <div id="u13_2" class="expanded_container">
       <!--a id="grundlagen_u13" href="u13"><h3>Grundlagen</h3></a-->
 
-      <!--a id="standings_u13x" href="standings.html?key=u13f"><h3>Endstand (ÖMS)</h3></a>
-      <a id="results_u13x" href="results.html?key=u13f"><h3>Spiele (ÖMS)</h3></a-->
+      <!--a id="standings_u13x" href="standings.html?key=u13f"><h3>Endstand (ÖMS)</h3></a-->
+      <a id="results_u13x" href="results.html?key=u13x"><h3>Spiele (ÖMS)</h3></a>
       <a id="statistics_u13x" href="/u13/statisticsX.html"><h3>Statistik (ÖMS)</h3></a>
 
       <a id="standings_u13f" href="standings.html?key=u13f"><h3>Endstand (Finale)</h3></a>
