öms endstand, certificate

--- a/ov.html
+++ b/ov.html
@@ -30,7 +30,7 @@ function init() {
        'certificate_u12x', 'standings_u12x', 'results_u12x', 'statistics_u12x',
        'standings_u12f', 'standings_u12m',
        'results_u12f', 'results_u12m', 'schedule_u12', 'standings_u12q',
-      'grundlagen_u13',
+      'grundlagen_u13', 'certificate_u13x',
        'standings_u13x', 'results_u13x', 'statistics_u13x',
        'standings_u13f', 'results_u13f',
        'schedule_u13', 'standings_u13', 'statistics_u13',
@@ -46,7 +46,7 @@ function init() {
             'certificate_u12x', 'standings_u12x', 'results_u12x', 'statistics_u12x',
             'standings_u12f', 'standings_u12m', 'results_u12f', 'results_u12m',
             'schedule_u12', 'standings_u12q'],
-    'u13': ['grundlagen_u13',
+    'u13': ['grundlagen_u13', 'certificate_u13x',
             'standings_u13x', 'results_u13x', 'statistics_u13x',
             'standings_u13f', 'results_u13f',
             'schedule_u13', 'standings_u13', 'statistics_u13'],
@@ -141,7 +141,8 @@ function init() {
     <div id="u13_2" class="expanded_container">
       <!--a id="grundlagen_u13" href="u13"><h3>Grundlagen</h3></a-->
 
-      <!--a id="standings_u13x" href="standings.html?key=u13f"><h3>Endstand (ÖMS)</h3></a-->
+      <a id="certificate_u13x" href="/imageview.html?i=u13%2Fcertificate.jpeg&b=%2Fov.html%23certificate_u13x"><h3>Urkunde</h3></a>
+      <a id="standings_u13x" href="standings.html?key=u13x"><h3>Endstand (ÖMS)</h3></a>
       <a id="results_u13x" href="results.html?key=u13x"><h3>Spiele (ÖMS)</h3></a>
       <a id="statistics_u13x" href="/u13/statisticsX.html"><h3>Statistik (ÖMS)</h3></a>
 
