--- a/teambuilding/br3_19/index.html
+++ b/teambuilding/br3_19/index.html
@@ -18,18 +18,18 @@
   <div id="content_container">
   <table class="tactics" align="center" cellspacing="0" cellpadding="10">
   <tr>
-    <td><a id="tb1" href="/imageview.html?i=%2Fuld%2Fgrundlagen3%2Ftb%2Fitem1.jpg&t=Teambuilding&b=%2Fuld%2Fgrundlagen3%2Ftb%2F%23tb1"><img src="item1_small.jpg" alt="Teambuilding 1"></a></td>
+    <td><a id="tb1" href="/imageview.html?i=%2Fteambuilding%2Fbr3_19%2Fitem1.jpg&t=Teambuilding&b=%2Fteambuilding%2Fbr3_19%2F%23tb1"><img src="item1_small.jpg" alt="Teambuilding 1"></a></td>
   </tr>
   </table>
   <table class="tactics" align="center" cellspacing="0" cellpadding="10">
   <tr>
-    <td><a id="tb2a" href="/imageview.html?i=%2Fuld%2Fgrundlagen3%2Ftb%2Fitem2a.jpg&t=Teambuilding&b=%2Fuld%2Fgrundlagen3%2Ftb%2F%23tb2a"><img src="item2a_small.jpg" alt="Teambuilding 2a"></a></td>
-    <td><a id="tb2b" href="/imageview.html?i=%2Fuld%2Fgrundlagen3%2Ftb%2Fitem2b.jpg&t=Teambuilding&b=%2Fuld%2Fgrundlagen3%2Ftb%2F%23tb2b"><img src="item2b_small.jpg" alt="Teambuilding 2b"></a></td>
+    <td><a id="tb2a" href="/imageview.html?i=%2Fteambuilding%2Fbr3_19%2Fitem2a.jpg&t=Teambuilding&b=%2Fteambuilding%2Fbr3_19%2F%23tb2a"><img src="item2a_small.jpg" alt="Teambuilding 2a"></a></td>
+    <td><a id="tb2b" href="/imageview.html?i=%2Fteambuilding%2Fbr3_19%2Fitem2b.jpg&t=Teambuilding&b=%2Fteambuilding%2Fbr3_19%2F%23tb2b"><img src="item2b_small.jpg" alt="Teambuilding 2b"></a></td>
   </tr>
   </table>
   <table class="tactics" align="center" cellspacing="0" cellpadding="10">
   <tr>
-    <td><a id="tb3" href="/imageview.html?i=%2Fuld%2Fgrundlagen3%2Ftb%2Fitem3.jpg&t=Teambuilding&b=%2Fuld%2Fgrundlagen3%2Ftb%2F%23tb3"><img src="item3_small.jpg" alt="Teambuilding 3"></a></td>
+    <td><a id="tb3" href="/imageview.html?i=%2Fteambuilding%2Fbr3_19%2Fitem3.jpg&t=Teambuilding&b=%2Fteambuilding%2Fbr3_19%2F%23tb3"><img src="item3_small.jpg" alt="Teambuilding 3"></a></td>
   </tr>
   </table>
   </div>
